# ariadne

./: README.md  app.py  ariadne.py  config.py  emails.json  lambda_function.py  pyproject.toml  requirements.txt
.github/workflows/: deploy_lambda.yml
